crates/sim-citizen-derive/tests/ui/fail/citizen_missing_default.stderr
error[E0277]: the trait bound `MissingDefault: Default` is not satisfied
 --> tests/ui/fail/citizen_missing_default.rs:5:35
  |
5 | #[derive(Clone, Debug, PartialEq, Citizen)]
  |                                   ^^^^^^^ the trait `Default` is not implemented for `MissingDefault`
  |
  = note: this error originates in the derive macro `Citizen` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MissingDefault` with `#[derive(Default)]`
  |
7 + #[derive(Default)]
8 | struct MissingDefault {
  |
